# cycle-accurate-hardware-benchmark-tool

./: .gitignore  README.md  default.nix  reproduce.py  test-all.sh
benchmarks/: README.md  aes_mode.bench  aes_per_block.bench  aes_per_block_tight.bench  aes_total.bench  microbench.bench  raw_example_aes.bench  raw_example_ecdsa.bench  raw_example_rng.bench  raw_example_sha.bench  rng.bench  sha2.bench  sha3.bench
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: lib.rs  main.rs  tty.rs
cli/tests/: raw_console.rs  suite_emulator.rs
common/: Cargo.toml
common/.cargo/: config.toml
common/src/: lib.rs
suite/: Cargo.toml  build.rs  memory.x
suite/.cargo/: config.toml  runner.sh
suite/memory/: nexysvideo_earlgrey.x  qemu_virt.x  verilator_earlgrey.x
suite/src/: benchmark.rs  cmd.rs  main.rs  runtime.rs  test.rs
suite/src/benchmark/: datasets.rs  mod.rs
suite/src/libs/: ecdsa.rs  mod.rs  otbn.rs
suite/src/modules/: mod.rs  opentitan_aes.rs  opentitan_csrng.rs  opentitan_hmac.rs  opentitan_kmac.rs  opentitan_otbn.rs  opentitan_uart.rs  uart16550.rs
suite/src/platform/: mod.rs  virt.rs
suite/src/platform/earlgrey/: ibex_start_nexysvideo.S  ibex_start_verilator.S  mod.rs
