[package]
name = "benchmark-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "^1.0", default-features = false, features = ["alloc"] }

[features]
default = []
cli = []
suite = []
