[package]
name = "suite"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-rt = "^0.8.1"
riscv = "^0.7.0"
bitflags = "^1.3.2"
linked_list_allocator = { version = "^0.9.1", default-features = false, features = [ "const_mut_refs" ] }

[features]
default = [ "platform_virt" ]
platform_virt = []
